k8s/demoapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: demoapi-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            component: api
    template:
        metadata:
            labels:
                component: api
        spec:
            containers:
                - name: api
                  image: ciprianciobotaru/demoapi:latest
                  ports:
                    - containerPort: 8890
            imagePullSecrets:
                - name: regcred
