k8s/demoapi-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: demoapi-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: api
    ports:
        - port: 8890
          targetPort: 8890
